<resources>
    <string name="app_name">screenShein</string>
    <string name="sheen_txt1">FREE RETURNS</string>
    <string name="sheen_txt2">*US ONLY</string>
    <string name="sheen_txt3">FREE STANDAR SHIPPING</string>
    <string name="sheen_txt4">ON ORDERS OF $49+</string>
    <string name="sheen_txt5">CHECK IN DAILY</string>
    <string name="sheen_txt6">FOR MORE SHEIN POINTS!</string>
    <string name="sheen_txt7">on orders of $29+</string>
    <string name="sheen_txt8">15% OFF</string>
    <string name="sheen_txt9">on orders of $69+</string>
    <string name="sheen_txt10">20% OFF</string>
    <string name="sheen_txt11">on orders of $169+</string>
    <string name="sheen_txt12">CODE:<strong> PRESALE2021</strong></string>
    <string name="shein_txt13">#SHEINsummerfun</string>
    <string name="shein_txt14">Pre-Memorial Day Sale</string>
    <string name="shein_txt15">30 - 70% OFF</string>
    <string name="sheen_txt16">FOR MORE SHEIN POINTS!</string>
</resources>